# EntangPy

./: README.md  ROADMAP.md  pyproject.toml
src/entangpy/: __init__.py  study.py  trial.py
tests/: test_core.py
