[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entangpy"
version = "0.1.0"
authors = [
  { name="Yuta Tamura", email="tamura.go.tamura@example.com" },
]
description = "Quantum-inspired optimization library for everyone"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Homepage" = "https://github.com/tamura-go-tamura/EntangPy"
